Add Back to top Button

--- a/index.html
+++ b/index.html
@@ -29,12 +29,15 @@
 </head>
 
 <body>
+  <!-- Scroll to top  -->
+  <div class="top"> <a href="#top"><i class="fa-solid fa-arrow-up"></i></a></div>
+
   <!-- Header  -->
-  <header class="header">
+  <header class="header" id="top">
     <div class="full-container">
     <div class="container flex">
     <div class="logo">
-      <a class="transition" href="index.html">carvilla</a>
+      <a class="transition"href="index.html">carvilla</a>
     </div>
     <nav>
       <ul >
